enrich customer order visualization
