# infrastructure/src/main/kotlin/br/com/vertice/emerion_dashboard/infrastructure/rest/customerorder/mapper/CustomerOrderQueryRestMapper.kt
@@ -38,6 +38,50 @@ object CustomerOrderQueryRestMapper {
             quantidade = item.quantidade,
             valorUnitario = item.valorUnitario,
             valorTotal = item.valorTotal,
+            seqRe2 = item.seqRe2,
+            codClp = item.codClp,
+            codSt1 = item.codSt1,
+            codUnd = item.codUnd,
+            vluRe2 = item.vluRe2,
+            dscRe2 = item.dscRe2,
+            dsrRe2 = item.dsrRe2,
+            icmsAliquota = item.icmsAliquota,
+            icmsBase = item.icmsBase,
+            icmsValor = item.icmsValor,
+            icmsReducaoBase = item.icmsReducaoBase,
+            icmsSubstituicaoBase = item.icmsSubstituicaoBase,
+            icmsSubstituicaoValor = item.icmsSubstituicaoValor,
+            icmsSubstituicaoAliquota = item.icmsSubstituicaoAliquota,
+            icmsSubstituicaoMargem = item.icmsSubstituicaoMargem,
+            icmsSubstituicaoReducaoBase = item.icmsSubstituicaoReducaoBase,
+            ipiAliquota = item.ipiAliquota,
+            ipiBase = item.ipiBase,
+            ipiValor = item.ipiValor,
+            ipiClassificacao = item.ipiClassificacao,
+            ipiCst = item.ipiCst,
+            pisBase = item.pisBase,
+            pisAliquota = item.pisAliquota,
+            pisValor = item.pisValor,
+            pisCst = item.pisCst,
+            cofinsBase = item.cofinsBase,
+            cofinsAliquota = item.cofinsAliquota,
+            cofinsValor = item.cofinsValor,
+            cofinsCst = item.cofinsCst,
+            descontoValor = item.descontoValor,
+            freteValor = item.freteValor,
+            seguroValor = item.seguroValor,
+            outrasDespesasValor = item.outrasDespesasValor,
+            totalItemTributado = item.totalItemTributado,
+            totRen = item.totRen,
+            totGe2 = item.totGe2,
+            observacao = item.observacao,
+            pedidoCompraCliente = item.pedidoCompraCliente,
+            itemPedidoCompraCliente = item.itemPedidoCompraCliente,
+            nroRe2 = item.nroRe2,
+            flgVal = item.flgVal,
+            flgPac = item.flgPac,
+            flgLib = item.flgLib,
+            codCfo = item.codCfo,
         )
 
     fun toPageResponse(page: DomainPage<CustomerOrder>): CustomerOrderPage =
